fixed cards for services section to make text more visible.

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -793,6 +793,72 @@
     }
 
 
+    #services-page {
+        .jumbotron.services {
+
+            .card-deck,
+            .cards-grouppings-3,
+            .testing {
+
+
+                .card {
+
+                    &.two-cards-seprate-titles {
+                        height: 100%;
+                        height: 350px;
+                        width: 100%;
+
+                        max-width: 555px;
+
+                        hr {
+                            width: 100%;
+                            border: 0.75px solid $lightColor;
+                            margin: 0;
+                        }
+
+                        .subtext {
+                            font-family: $mainFont;
+                            font-style: normal;
+                            font-weight: normal;
+                            font-size: 12px;
+                            line-height: normal;
+
+                            color: $lightColor;
+
+                            padding: 0;
+                        }
+                    }
+
+                    &.service-twelve {
+                        background-image: url('../img/services12.png');
+                        background-repeat: no-repeat;
+                        background-position: center center;
+                        background-size: cover;
+                    }
+
+                    .card-end {
+
+
+
+                        .btn {
+                            font-family: $secondaryFont;
+                            font-style: normal;
+                            font-weight: normal;
+                            font-size: 15px;
+                            line-height: normal;
+                            background-color: transparent;
+                            border: $redColor 1px solid;
+
+                            color: $lightColor;
+                            padding: 6px 8px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+
 }
 
 @include mediaSm {
@@ -1285,6 +1351,31 @@
 
 
                 .card {
+
+                    &.two-cards-seprate-titles {
+                        height: 350px;
+                        width: 100%;
+
+                        max-width: 555px;
+
+                        hr {
+                            width: 100%;
+                            border: 0.75px solid $lightColor;
+                            margin: 0;
+                        }
+
+                        .subtext {
+                            font-family: $mainFont;
+                            font-style: normal;
+                            font-weight: normal;
+                            font-size: 12px;
+                            line-height: normal;
+
+                            color: $lightColor;
+
+                            padding: 0;
+                        }
+                    }
 
                     .card-end {
 
